edit README file

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,23 +2,120 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "peripheral-hobby",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-03-06T23:47:06.620590Z",
-     "start_time": "2021-03-06T23:47:06.617941Z"
-    }
-   },
+   "execution_count": null,
+   "id": "several-consensus",
+   "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "voluntary-jungle",
+   "metadata": {},
    "source": [
-    "# Libraries"
+    "__[The Human Phenotype Ontology](https://hpo.jax.org/app/)__\n",
+    "<br> __[Medical News Today](https://www.medicalnewstoday.com/articles/321285#Detailed-information-about-food-sources)__\n",
+    "<br> __[My Epilepsy Team](https://www.myepilepsyteam.com/resources/tuberous-sclerosis-complex-tsc-your-guide)__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dense-filing",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "beautiful-consequence",
+   "metadata": {},
+   "source": [
+    "<p>\n",
+    "  <b>Cortical Dysplasia</b>\n",
+    "  <br />\n",
+    "  The presence of developmental dysplasia of the cerebral cortex.\n",
+    "  <br />\n",
+    "\n",
+    "</p>\n",
+    "\n",
+    "__[Source 1](https://hpo.jax.org/app/browse/term/HP:0002539)__\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "<p>\n",
+    "  <b>Cortical Tubers</b>\n",
+    "  <br />\n",
+    "Cortical tubers in the brain are hamartomatous lesions typically located at the gray-white matter interface, commonly in the frontal and parietal lobes. Cortical tubers are composed of abnormal glial and neural cells, and the size, number, and location vary among patients.\n",
+    "</p>\n",
+    "\n",
+    "__[Source 1](https://hpo.jax.org/app/browse/term/HP:0009717)__\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "<p>\n",
+    "  <b>Generalized abnormality of skin</b>\n",
+    "  <br />\n",
+    "An abnormality of the skin that is not localized to any one particular region.\n",
+    "\n",
+    "\n",
+    "</p>\n",
+    "\n",
+    "__[Source 1](https://hpo.jax.org/app/browse/term/HP:0011354)__\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "<p>\n",
+    "  <b>Hypomelanotic macule</b>\n",
+    "  <br />\n",
+    "Hypomelanotic macules (\"ash leaf spots\") are white or lighter patches of skin that may appear anywhere on the body and are caused by a lack of melanin. White ash leaf-shaped macules are considered to be characteristic of tuberous sclerosis.\n",
+    "</p>\n",
+    "\n",
+    "__[Source 1](https://hpo.jax.org/app/browse/term/HP:0009719)__\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "<p>\n",
+    "  <b>Subependymal nodules</b>\n",
+    "  <br />\n",
+    "Small nodular masses which originate in the subependymal region of the lateral ventricles and protrude into the ventricular cavity. They may represent subependymal hamartomas of tuberous sclerosis or nodular heterotopia of grey matter.\n",
+    "</p>\n",
+    "\n",
+    "__[Source 1](https://hpo.jax.org/app/browse/term/HP:0009716)__"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ranking-twenty",
+   "id": "artistic-overview",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Brain findings:\n",
+    "Benign brain tumor (astrocytoma)\n",
+    "Abnormal organization of the brain (cortical dysplasia)\n",
+    "Nodules in the brain (subependymal nodules)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "solid-municipality",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Other systems:\n",
+    "Benign growth in the retina (retinal hamartoma)\n",
+    "Heart muscle tumor (cardiac rhabdomyoma)\n",
+    "Formation of unusual clumps of cells in the lungs (pulmonary lymphangiomyomatosis)\n",
+    "Kidney growths (renal angiomyolipoma)\n",
+    "Developmental delay\n",
+    "Intellectual disability\n",
+    "Behavioral issues"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "first-palmer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +127,74 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lucky-chest",
+   "id": "sound-diamond",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "carcinogens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "intense-playlist",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-06T23:59:15.515281Z",
+     "start_time": "2021-03-06T23:59:15.512239Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Plants that Improve Memory and Concentration\n",
+    "\n",
+    "memory_food = [\n",
+    "    'Ashwagandha', 'Bacopa Monnieri', 'Beans', 'Blueberries', 'Ginkgo Biloba',\n",
+    "    'Ginseng', 'Gotu Kola', 'Holy Basil', 'Huperzia', 'Kale', 'Peppermint',\n",
+    "    'Periwinkle', 'Reishi Mushroom', 'Rosemary', 'Sweet Flag Vacha', 'Thyme',\n",
+    "    'Yerba Mate'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "assisted-affair",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "fat_food = [\n",
+    "    \n",
+    "    'Avocados',\n",
+    "    'Flaxseeds',\n",
+    "    'Extra-Virgin Olive Oil (EVOO)',\n",
+    "    'Chia Seeds',\n",
+    "    'Walnuts',\n",
+    "    'Cacao Nibs',\n",
+    "    'Coconuts',\n",
+    "    'Coconut Oil',\n",
+    "    'Almonds',\n",
+    "    'Nut and seed butters',\n",
+    "    'Olives',\n",
+    "    'Tofu',\n",
+    "    'Edamame',\n",
+    "    'Anchovies',\n",
+    "    'Pumpkin seeds',\n",
+    "    'Macadamia nuts',\n",
+    "    'Edamame',\n",
+    "    'Edamame',\n",
+    "    'Edamame',\n",
+    "    'Edamame',\n",
+    "    'Sunflower seeds'\n",
+    "    \n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "opponent-mother",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -38,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "front-regular",
+   "id": "altered-shareware",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -46,7 +210,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "secure-deployment",
+   "id": "illegal-steel",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "rental-socket",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "allied-capital",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "looking-accuracy",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "outer-spectrum",
    "metadata": {},
    "outputs": [],
    "source": []
